<resources>
    <string name="app_name">Joetz!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="wachtwoordVergeten">Wachtwoord vergeten</string>
    <string name="registreer">Registreer</string>
    <string name="email">E-mailadres</string>
    <string name="regGeboortedatum">Geboortedatum</string>
    <string name="regGebruikersnaam">Gebruikersnaam</string>
    <string name="regRijksregisternummer">Rijksregisternummer</string>
    <string name="regVoornaam">Voornaam</string>
    <string name="regNaam">Naam</string>
    <string name="regWachtwoord">Wachtwoord</string>
    <string name="regEmail">E-mailadres</string>
    <string name="verstuur">Verstuur</string>
    <string name="geheimeVraag">Geef het antwoord op je geheime vraag :</string>
    <string name="nav_drawer_historiek">Historiek</string>
    <string name="nav_drawer_activiteit">Activiteiten</string>
    <string name="nav_drawer_contributors">Medewerkers</string>
    <string name="nav_drawer_all_users">Leden</string>
    <string name="nav_drawer_kampen">Kampen</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_profiel">Profiel</string>
    <string name="loadingImage">loading image</string>
    <string name="nieuwtjes">Nieuwtjes</string>
    <string name="mededelers">Wie gaat er mee?</string>
    <string name="inschrijven">Inschrijven voor dit kamp</string>
    <string name="historiek">Historiek</string>
    <string name="historiek_leeg_slag">Aan de slag!</string>
    <string name="historiek_leeg_geenKamp">Je bent nog niet op kamp geweest...</string>
    <string name="historiek_leeg_kiesKamp">kies snel een kamp!</string>
    <string name="historiek_leeg_imagebeschrijving">lege Historiek pagina foto</string>
    <string name="camps">Kampen</string>
    <string name="activiteiten">Activiteiten</string>
    <string name="mischien_aanwezig">Misschien aanwezig</string>
    <string name="deelnemer">Deelnemer</string>
    <string name="material_drawer_open">Open</string>
    <string name="material_drawer_close">Closed</string>
    <string name="aanwezig">Aanwezigen</string>
    <string name="ouders">Ouders</string>
    <string name="save">Opslagen</string>
    <string name="oudWachtwoord">Huidig wachtwoord</string>
    <string name="nieuwWachtwoord">Nieuw wachtwoord</string>
    <string name="herhaalNieuwWachtwoord">Herhaal nieuw wachtwoord</string>
    <string name="dialog_error">Fout</string>
    <string name="dialog_logout">Uitloggen</string>
    <string name="login_login_error">Er ging iets fout tijdens het inloggen.</string>
    <string name="register_register_error">Er ging iets fout tijdens het registreren.</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nee</string>
    <string name="get_data_progress">Bijna klaar...</string>
    <string name="login_progress">Inloggen...</string>
    <string name="get_user_progress">Gebruikersgegevens ophalen...</string>
    <string name="get_activities_progress">Activiteiten ophalen...</string>
    <string name="get_all_users_progress">Alle gebruikers ophalen...</string>
    <string name="get_camps_progress">Kampen ophalen...</string>
    <string name="get_inschrijvingen_progress">Inschrijvingen ophalen...</string>
    <string name="edit_user_role_progress">Rol bewerken...</string>
    <string name="add_contributor_progress">Medewerkers toevoegen...</string>
    <string name="be_quick">BE QUICK!!!</string>
    <string name="profile_email">E-mailadres</string>
    <string name="profile_username">Gebruikersnaam</string>
    <string name="profile_address">Adres</string>
    <string name="profile_role">Rol</string>
    <string name="profile_birthdate">Geboortedatum</string>
    <string name="profile_securitynumber">Rijksregisternummer</string>
    <string name="profile_datejoined">Lid sinds</string>
    <string name="profile_contactperson1">Contactpersoon 1</string>
    <string name="profile_contactperson2">Contactpersoon 2</string>
    <string name="profile_edit">Bewerken</string>
    <string name="not_provided">Niet opgegeven</string>
    <string name="edit_user">Bewerk gegevens</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Naam</string>
    <string name="birthdate">Geboortedatum</string>
    <string name="security_number">Rijksregisternummer</string>
    <string name="building_name">Naam gebouw</string>
    <string name="street">Straat</string>
    <string name="house_number">Huisnummer</string>
    <string name="extra_field">Bus</string>
    <string name="city">Gemeente</string>
    <string name="postal_code">Postcode</string>
    <string name="edit_user_avatar">Verander avatar</string>
    <string name="edit_user_general_info">Algemene gegevens</string>
    <string name="edit_user_address">Adres</string>
    <string name="edit_contactperson">Bewerk contactpersoon</string>
    <string name="telephone_number">Telefoonnummer</string>
    <string name="join_number">Aansluitnummer</string>
    <string name="paying">Betalend?</string>
    <string name="parent">Ouder?</string>
    <string name="profile_ownercode">Code gerechtigde</string>
    <string name="owner_code">Code gerechtigde</string>
    <string name="zet_aanwezig">Zet op aanwezig</string>
    <string name="add_user_to_activity_progress">Gebruiker toevoegen...</string>
    <string name="camp_detail_transport">Vervoersmethode</string>
    <string name="camp_detail_ages">Leeftijden</string>
    <string name="camp_detail_participants">Deelnemers</string>
    <string name="camp_detail_contact">Contact</string>
    <string name="medewerkers">Medewerkers</string>
    <string name="users">Gebruikers</string>
    <string name="action_add_person">Inschrijven</string>
    <string name="action_edit">Bewerken</string>
    <string name="dialog_add_user">Bent u zeker dat je je op aanwezig wilt zetten?</string>
    <string name="dialog_user_already_in_list">Je staat reeds op aanwezig.</string>
    <string name="dialog_choose_role">Kies een rol</string>
    <string name="dialog_create_activity">Activiteit aanmaken...</string>
    <string name="dialog_create_camp">Kamp aanmaken...</string>
    <string name="create_activity">Activiteit aanmaken</string>
    <string name="create_activity_name">Naam</string>
    <string name="create_activity_date">Datum</string>
    <string name="create_activity_location">Locatie</string>
    <string name="create_activity_whole_day">De hele dag?</string>
    <string name="create_activity_begin">Beginuur</string>
    <string name="create_activity_end">Einduur</string>
    <string name="confirm">Bevestig</string>
    <string name="create_camp">Kamp aanmaken</string>
    <string name="create_camp_name">Naam</string>
    <string name="create_camp_begin">Startdatum</string>
    <string name="create_camp_end">Einddatum</string>
    <string name="create_camp_transport">Vervoerswijze</string>
    <string name="create_camp_price">Prijs</string>
    <string name="create_camp_min_age">Minimumleeftijd</string>
    <string name="create_camp_max_age">Maximumleeftijd</string>
    <string name="create_camp_max_participants">Maximum aantal deelnemers</string>
    <string name="create_camp_contact">Contact</string>
    <string name="create_camp_image">URL sfeerfoto</string>
    <string name="create_camp_address">Adres</string>
    <string name="create_camp_building_name">Naam gebouw</string>
    <string name="create_camp_street">Straat</string>
    <string name="create_camp_number">Huisnummer</string>
    <string name="create_camp_extra_field">Bus</string>
    <string name="create_camp_city">Gemeente</string>
    <string name="create_camp_postal_code">Postcode</string>
    <string name="create_camp_description">Omschrijving</string>
    <string name="add_contributor">Medewerkers toevoegen</string>

    <array name="dialog_roles">
        <item>Lid</item>
        <item>Monitor</item>
        <item>Beheerder</item>
    </array>
</resources>
