<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_drawer_home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_historiek"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_drawer_historiek" />

        <item
            android:id="@+id/nav_kampen"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_drawer_kampen" />

        <item
            android:id="@+id/nav_activiteiten"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/nav_drawer_activiteit" />

        <item
            android:id="@+id/nav_contibutors"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_drawer_contributors" />

        <item
            android:id="@+id/nav_all_users"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_drawer_all_users" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />

    </group>
</menu>
