<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_historiek_calendar"
        android:id="@+id/historiekLeeg_image"
        android:contentDescription="@string/historiek_leeg_imagebeschrijving" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/historiekLeeg_lblAanDeSlag"
        android:text="@string/historiek_leeg_slag"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/historiekLeeg_geenKamp"
        android:text="@string/historiek_leeg_geenKamp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/historiekLeeg_btnKiesKamp"
        android:text="@string/historiek_leeg_kiesKamp"/>
</LinearLayout>