<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:padding="10dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/lblLogin"
        android:src="@drawable/joetz"/>
=======
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/joetz"
        android:id="@+id/lblLogin"/>
>>>>>>> feature/design

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
<<<<<<< HEAD
        android:text="@string/email"
        android:id="@+id/lblEmail"/>
=======
        android:textColor="@color/accent"
        android:text="@string/email"
        android:id="@+id/lblEmail" />
>>>>>>> feature/design

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
<<<<<<< HEAD
=======
        android:textColor="@color/accent"
>>>>>>> feature/design
        android:id="@+id/txtEmail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
<<<<<<< HEAD
=======
        android:textColor="@color/accent"
>>>>>>> feature/design
        android:text="@string/wachtwoord"
        android:id="@+id/lblWachtwoord" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:inputType="textPassword"
=======
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:textColor="@color/accent"
>>>>>>> feature/design
        android:id="@+id/txtWachtwoord" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/login"
        android:id="@+id/btnLogin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/be_quick"
        android:id="@+id/btnBeQuick" />
=======
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="@color/md_white_1000"
        android:background="@color/accent"
        android:id="@+id/btnLogin" />
>>>>>>> feature/design

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wachtwoordVergeten"
        android:id="@+id/txtwwVergeten"
        android:textColor="#0000EE"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/registreer"
        android:id="@+id/txtRegistreer"
        android:textColor="#0000EE"/>

</LinearLayout>
